# gd32l23x-demo-suites-cmake

./: README.md
Drivers/BSP/GD32L233C_START/: gd32l233c_start.c  gd32l233c_start.h
Drivers/BSP/GD32L233K_START/: gd32l233k_start.c  gd32l233k_start.h
Drivers/BSP/GD32L233R_EVAL/: gd32l233r_eval.c  gd32l233r_eval.h
Drivers/BSP/GD32L235E_START/: gd32l235e_start.c  gd32l235e_start.h
Drivers/BSP/GD32L235O_START/: gd32l235o_start.c  gd32l235o_start.h
Drivers/BSP/GD32L235Q_START/: gd32l235q_start.c  gd32l235q_start.h
Drivers/BSP/GD32L235R_EVAL/: gd32l235r_eval.c  gd32l235r_eval.h
Projects/GD32L233C_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L233C_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32L233C_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L233C_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L233C_START/05_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233C_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L233C_START/06_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233K_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L233K_START/02_GPIO_Key_Polling_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233K_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L233K_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L233K_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32L233K_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L233K_START/06_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/01_GPIO_Running_LED/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32L233R_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L233R_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32L233R_EVAL/05_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L233R_EVAL/19_RTC_Calendar/: gd32l23x_flash.ld
Projects/GD32L233R_EVAL/23_USBD_Keyboard/: CMakeLists.txt
Projects/GD32L233R_EVAL/23_USBD_Keyboard/Drivers/GD32L23x_usbd_library/: CMakeLists.txt
Projects/GD32L235O_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L235Q_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L235R_EVAL/06_USART_DMA/: gd32l235_flash.ld
Projects/GD32L235R_EVAL/22_LPTIMER_Deepsleep_Pwmout/: GD32L235x.svd
Projects/GD32L235R_EVAL/23_SLCD_Glass/: vcpkg-configuration.json
Projects/GD32L235R_EVAL/25_USBD_CDC_ACM/: CMakeLists.txt
(+280 files in other folders)
